# prime

./: .gitignore  BUILD.md  Cargo.toml  DEPLOYMENT_GUIDE.md  LICENSE.md  README.md  eslint.config.js  index.html  install.ps1  install.sh  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/: PUSH_TO_GITHUB_PROMPT.md
.github/workflows/: ci.yml  release.yml
docs/: CONNECTIONS.md  DEVELOPER.md  MASTER_PLAN.md  STABILIZATION_REPORT.md  SUPERVISOR.md  TOOLS_REGISTRY.md  VERIFICATION_REPORT.md
prime_core/: Cargo.toml
prime_core/src/: lib.rs
prime_core/src/contracts/: mcp.rs  memory.rs  mod.rs  runtime.rs  skills.rs
prime_core/src/core/: grpc.rs  mod.rs  runtime.rs  serde_config.rs  storage.rs  supervisor.rs  wasm.rs
prime_core/src/security/: audit.rs  encryption.rs  integrity.rs  mod.rs  permissions.rs  rate_limiter.rs  resource_limits.rs  sandbox.rs
scripts/: build.ps1  crash_recovery.ps1  generate-icons.mjs
src/: App.test.tsx  App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs  main_headless.rs
src-tauri/src/ai/: credential_pool.rs  features.rs  mod.rs  models.rs  provider_registry.rs  providers.rs  routing.rs
src-tauri/src/arch/: actor.rs  cancellation.rs  event_bus.rs  logging.rs  mod.rs  observability.rs  orchestrator.rs  scheduler.rs  task_planner.rs  trace.rs  workflow.rs
src-tauri/src/browser/: a11y.rs  dom.rs  mod.rs  ocr.rs  playwright.rs  vision.rs
src-tauri/src/code_intel/: deps.rs  mod.rs  parser.rs  search.rs  symbols.rs
src-tauri/src/computer_use/: mod.rs
src-tauri/src/dev/: agents.rs  governance.rs  indexing.rs  live_reload.rs  mod.rs  patches.rs  retrieval.rs  workspace.rs
src-tauri/src/execution/: checkpoint.rs  diff.rs  mod.rs  output_streamer.rs  patch.rs  retry.rs  rollback.rs  supervisor.rs  terminal.rs
src-tauri/src/ide/: files.rs  import.rs  mod.rs  workspace.rs
src-tauri/src/mcp/: browser.rs  database.rs  discord.rs  docs.rs  filesystem.rs  git.rs  memory.rs  mod.rs  os.rs  search.rs  telegram.rs  terminal.rs  whatsapp.rs
src-tauri/src/memory/: cache.rs  compression.rs  episodic.rs  mod.rs  rag.rs  semantic.rs  vector.rs  working.rs
src-tauri/src/observability/: crash_reporter.rs  debug_console.rs  metrics.rs  mod.rs  task_monitor.rs  telemetry.rs  timeline.rs  trace_store.rs
src-tauri/src/phi_brain/: client.rs  guardian.rs  learner.rs  mod.rs  orchestrator.rs  profile_db.rs  proofreader.rs
src-tauri/src/proxy/: mod.rs  rotator.rs
src-tauri/src/server/: mod.rs
src-tauri/src/skills/: hot_reload.rs  loader.rs  mod.rs  permissions.rs  sandbox.rs  signing.rs  wasm_plugin.rs
src-tauri/src/system/: mod.rs
src-tauri/src/tools/: ai_integration.rs  browser_stealth.rs  commands.rs  communication.rs  compression.rs  config.rs  fingerprint.rs  gateway.rs  identity.rs  mcp_skills.rs  mod.rs  monetization.rs  obfuscation.rs  offensive.rs  payments.rs  pipeline.rs  proxy_pool.rs  registry.rs  runner.rs  server_mgmt.rs  ssh_remote.rs  swarm.rs
src-tauri/src/verification/: error_analyzer.rs  linter.rs  mod.rs  reviewer.rs  self_heal.rs  test_runner.rs  validator.rs
src-tauri/tests/: integration_test.rs  mcp_tests.rs  search_tests.rs  security_tests.rs
src/components/: AgentMonitor.test.tsx  AgentMonitor.tsx  BrowserAutomation.test.tsx  BrowserAutomation.tsx  BrowserModeFull.tsx  ChatMode.tsx  CodeMode.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConnectionsPanel.tsx  DashboardMode.tsx  EventTimeline.tsx  LanguageSwitcher.tsx  LauncherScreen.tsx  LogsViewer.tsx  McpManager.tsx  MemoryViewer.tsx  ModeSwitcher.tsx  ModelManager.tsx  MonacoEditor.tsx  OnboardingWizard.tsx  PaymentsPanel.tsx  PhiBrainStatus.tsx  PluginManager.tsx  ProxyPoolManager.test.tsx  ProxyPoolManager.tsx  SecurityDashboard.test.tsx  SecurityDashboard.tsx  SettingsPanel.tsx  TaskMonitor.test.tsx  TaskMonitor.tsx  ToolsRegistry.tsx  UpdateBanner.tsx  WorkflowPanel.tsx
src/hooks/: useTheme.ts
src/lib/: utils.test.ts  utils.ts
src/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  i18n.ts  pt.json  ru.json  zh.json
src/stores/: useAgentActivityStore.ts  useAppStore.ts  useChatStore.ts  useConfigStore.ts  useIdeStore.ts  useMcpStore.ts  useMemoryStore.ts  useModelStore.ts  usePaymentStore.ts  usePhiBrainStore.ts  usePluginStore.ts  useToolsStore.ts  useUpdateStore.ts  useViewMode.ts  useWorkflowStore.ts
src/types/: index.ts
(+7 files in other folders)
