[workspace]
resolver = "2"
members = ["src-tauri", "prime_core"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Prime Team"]

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
parking_lot = "0.12"
once_cell = "1"
itertools = "0.12"
rayon = "1"
futures = "0.3"
bytes = "1"
derive_builder = "0.12"
strum = { version = "0.25", features = ["derive"] }
glob = "0.3"
walkdir = "2"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
