[package]
name = "prime_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Prime Core Engine — Isolated business logic layer."

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.8"
toml = "0.8"
rmp-serde = "1"

# Encryption & Hashing
aes-gcm = "0.10"
argon2 = "0.5"
blake3 = "1"

# Tracing
tracing = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
once_cell = "1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1"

# Filesystem
dirs-next = "2"

# Compression (backup/restore)
zip = { version = "0.6", features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
tesseract = []
